[tool.poetry]
name = "autohrbc"
version = "0.1.0"
description = ""
authors = ["Ken Nagamine <7955031+nag8@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
chromedriver-binary = "^83.0.4103"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
