[tool.poetry]
name = "autohrbc"
version = "0.1.0"
description = ""
authors = ["Ken Nagamine <7955031+nag8@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
selenium = "^3.141.0"
chromedriver-binary = "^83.0.4103"
gspread = "^3.6.0"
oauth2client = "^4.1.3"
schedule = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
